# artemis-uni-tri-arb

./: .env.example  .gitignore  .gitmodules  Cargo.toml  README.md  addressbook.json  docker-compose.yml  filtered-pools.json  justfile  rustfmt.toml
crates/addressbook/: Cargo.toml
crates/addressbook/src/: addressbook.json  lib.rs  utils.rs
crates/artemis-core/: Cargo.toml
crates/artemis-core/src/: engine.rs  types.rs
crates/artemis-core/src/collectors/: block_collector.rs  event_collector.rs  log_collector.rs  mempool_collector.rs  mod.rs  multi_log_collector.rs
crates/artemis-core/src/contracts/: foundry.toml
crates/artemis-core/src/contracts/src/: Executor.sol
crates/artemis-core/src/contracts/src/interfaces/: IExecutor.sol  IUniswapV3SwapRouter.sol
crates/artemis-core/src/contracts/test/: Executor.t.sol
crates/artemis-core/src/executors/: crosschain_executor.rs  mempool_executor.rs  mod.rs  sequence_executor.rs
crates/artemis-core/tests/: main.rs
crates/codex-client/: Cargo.toml
crates/codex-client/src/: lib.rs  schema.graphql
crates/codex-client/src/queries/: filter_pairs.graphql  filter_tokens.graphql  pairs_for_token.graphql  query_pairs_for_token.graphql  query_top_tokens.graphql  top_tokens.graphql
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: engine.rs  types.rs
crates/engine/src/collectors/: block_collector.rs  log_collector.rs  mempool_collector.rs  mod.rs  multi_log_collector.rs
crates/engine/src/executors/: mempool_executor.rs  mod.rs  sequence_executor.rs
crates/engine/tests/: main.rs
crates/shared/: Cargo.toml
crates/shared/contracts/src/: GetERC20TokenDataBatchRequest.sol
crates/shared/src/: addressbook.json  addressbook.rs  amm_utils.rs  atomic_encoder.rs  batch_encoder.rs  bridge.rs  config.rs  cycle.rs  encoder.rs  errors.rs  evm_helpers.rs  helpers.rs  lend.rs  lib.rs  named_pools.rs  odos.rs  pool_helpers.rs  provider.rs  proxy.rs  route.rs  simulator.rs  simulator_foundry.rs  simulator_revm.rs  swap.rs  token_helpers.rs  token_manager.rs  token_utils.rs  types.rs  utils.rs  zero_x.rs
crates/shared/src/abis/: GetERC20TokenDataBatchRequest.json
crates/shared/src/bindings/: geterc20tokendatabatchrequest.rs  ierc20.rs  mod.rs
crates/strategies/base-arb/: Cargo.toml
crates/strategies/base-arb/src/: lib.rs  state.rs  strategy.rs
crates/strategies/uni-tri-arb/: Cargo.toml
crates/strategies/uni-tri-arb/bindings/: Cargo.toml
crates/strategies/uni-tri-arb/bindings/src/: i_uniswap_v2_pair.rs  i_uniswap_v3_pool.rs  iweth.rs  lib.rs  owned.rs
crates/strategies/uni-tri-arb/contracts/: foundry.toml
crates/strategies/uni-tri-arb/contracts/bindings/: Cargo.toml
crates/strategies/uni-tri-arb/contracts/bindings/src/: i_uniswap_v2_callee.rs  i_uniswap_v2_factory.rs  i_uniswap_v2_router_01.rs  i_uniswap_v2_router_02.rs  i_uniswap_v2erc20.rs  ierc20.rs  iuniswapv2callee.rs  iuniswapv2erc20.rs  iuniswapv2factory.rs  iuniswapv2router02.rs  iweth.rs  lib.rs  math.rs  multicall_3.rs  safe_math.rs  transfer_helper.rs  uniswap_v2_factory.rs  uniswap_v2_library.rs  uniswap_v2_pair.rs  uniswap_v2_router_02.rs  uniswap_v2erc20.rs  uniswapv2erc20.rs  uniswapv2factory.rs  uniswapv2library.rs  uq112x112.rs  uq11_2x_112.rs
crates/strategies/uni-tri-arb/contracts/src/AlgebraFactory/contracts/: DataStorageOperator.sol
crates/strategies/uni-tri-arb/contracts/src/AlgebraFactory/contracts/interfaces/: IDataStorageOperator.sol
crates/strategies/uni-tri-arb/contracts/src/AlgebraFactory/contracts/libraries/: AdaptiveFee.sol  Constants.sol  DataStorage.sol  Sqrt.sol
crates/strategies/uni-tri-arb/contracts/src/AlgebraPool/contracts/: AlgebraPool.sol
crates/strategies/uni-tri-arb/contracts/src/AlgebraPool/contracts/base/: PoolImmutables.sol  PoolState.sol
crates/strategies/uni-tri-arb/contracts/src/AlgebraPool/contracts/interfaces/: IAlgebraFactory.sol  IAlgebraPool.sol  IAlgebraPoolDeployer.sol  IAlgebraVirtualPool.sol  IERC20Minimal.sol
crates/strategies/uni-tri-arb/contracts/src/AlgebraPool/contracts/libraries/: FullMath.sol  LiquidityMath.sol  LowGasSafeMath.sol  (+7 more)
crates/strategies/uni-tri-arb/src/: addressbook.rs  amm_math.rs  lib.rs  state.rs  strategy.rs  types.rs  uniswapv2.rs
crates/strategies/uni-tri-arb/tests/: state.rs
crates/tx-executor/: Cargo.toml  README.md
crates/tx-executor/contracts/: foundry.toml
crates/tx-executor/contracts/script/: DeployBatchExecutor.s.sol  HelperConfig.s.sol
crates/tx-executor/contracts/src/: BatchExecutor.sol
crates/tx-executor/contracts/src/interfaces/: IAaveV2Pool.sol  IAaveV3Pool.sol  IAerodromeRouter.sol  IWETH.sol
crates/tx-executor/contracts/test/: BatchExecutor.t.sol
crates/tx-executor/src/: encoder.rs  lib.rs
crates/tx-executor/src/bindings/: batchexecutor.rs  context.rs  deploybatchexecutor.rs  erc20.rs  helperconfig.rs  iaavev2pool.rs  iaavev3pool.rs  ierc1155errors.rs  ierc20.rs  ierc721metadata.rs  imorpho.rs  imorphostatictyping.rs  ipooladdressesprovider.rs  iuniswapv2router.rs  iuniswapv3pool.rs  iuniswapv3poolderivedstate.rs  iuniswapv3poolevents.rs  iuniswapv3poolimmutables.rs  iuniswapv3poolowneractions.rs  iuniswapv3poolstate.rs  iweth.rs  mockerc20.rs  mockerc721.rs  mod.rs  safetransferlib.rs  weth.rs
crates/tx-simulator/: Cargo.toml
crates/tx-simulator/contracts/src/: TxSimulator.sol
crates/tx-simulator/contracts/src/interfaces/: IAaveV3Pool.sol  IAerodromePool.sol  IAerodromeRouter.sol  ICurvePool.sol  IUniswapV2Pool.sol  IUniswapV2Router.sol  IUniswapV3QuoterV2.sol
crates/tx-simulator/contracts/src/libraries/: SafeMath.sol  UniswapV2Library.sol
crates/tx-simulator/src/: lib.rs  simulator.rs
crates/tx-simulator/src/bindings/: iaerodromepool.rs  iaerodromerouter.rs  icurvepool.rs  iexecutor.rs  irouter.rs  iuniswapv2pool.rs  iuniswapv3quoterv2.rs  iuniswapv3quoterv2lib.rs  iuniswapv3router.rs  mod.rs  safemath.rs  txsimulator.rs  uniswapv2library.rs
crates/types/: Cargo.toml
crates/types/src/: bridge.rs  chain_serde.rs  exchange.rs  lib.rs  pool.rs  standard_pool.rs  token.rs
(+274 files in other folders)
