[workspace]
members = [
    "bin/bot",
    "bin/cli",
    "bin/swap",
    "crates/engine",
    "crates/strategies/*",
    "crates/amms",
    "crates/db",
    "crates/bindings",
    "crates/shared",
    "crates/types",
    "crates/executor-binding",
    "crates/odos-client",
    "crates/encoder-client",
    "crates/addressbook",
    "crates/provider",
]

default-members = [
    "bin/bot",
    "bin/cli",
    "bin/swap",
    "crates/shared",
    "crates/db",
    "crates/engine",
    "crates/bindings",
    "crates/executor-binding",
    "crates/odos-client",
    "crates/encoder-client",
    "crates/addressbook",
    "crates/amms",
    "crates/provider",
]
resolver = "2"


[workspace.dependencies]
alloy = { version = "0.6.4", features = ["full"] }
alloy-primitives = "0.8"
alloy-rpc-types = "0.6.4"
alloy-sol-types = "0.8.6"
alloy-consensus = "0.6.4"
alloy-provider = "0.6.4"
alloy-chains = "0.1.27"
foundry-config = "0.2.0"
uniswap_v3_math = { git = "https://github.com/0xKitsune/uniswap-v3-math.git" }
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.37"
async-recursion = "1.0.5"
eyre = "0.6.10"
dotenv = "0.15.0"
once_cell = "1.19.0"


[profile.release]
panic = 'abort'

[profile.dev]
panic = 'abort'
incremental = true
