[package]
name = "addressbook"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true }
alloy-rpc-types = { workspace = true }
foundry-config = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
alloy-chains = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
dotenv = { workspace = true }
once_cell = { workspace = true }
lazy_static = "1.4.0"

bindings = { path = "../bindings" }
executor-binding = { path = "../executor-binding" }
types = { path = "../types" }
db = { path = "../db" }
amms = { path = "../amms" }
diesel = { version = "2.0.0", features = ["postgres", "serde_json", "chrono"] }
reqwest = { version = "0.12.9", features = ["json"] }
async-trait = "0.1.64"
futures = "0.3.27"
anyhow = "1.0.70"
tracing-subscriber = "0.3.16"
foundry-evm = { git = "https://github.com/foundry-rs/foundry.git", branch = "master" }
revm = { version = "14.0.1", features = ["alloydb"] }
clap = { version = "4.2.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
