[package]
name = "artemis-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

## async
async-trait = "0.1.64"
futures = "0.3"
tokio = { version = "1.18", features = ["full"] }
tokio-stream = { version = "0.1", features = ['sync'] }
jsonrpsee = { version = "0.18", features = ["client", "async-client"] }
alloy = { version = "0.2", features = ["full"] }
alloy-sol-types = "0.8.0"
bindings = { path = "../bindings" }


## misc
anyhow = "1.0.70"
thiserror = "1.0.40"
tracing = "0.1.37"
tower = "0.4.13"
