[package]
name = "artemis-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

## async
async-trait = "0.1.64"
futures = "0.3"
tokio = { version = "1.18", features = ["full"] }
tokio-stream = { version = "0.1", features = ['sync'] }
alloy = { version = "0.2", features = ["full"] }


## misc
anyhow = "1.0.70"
tracing = "0.1.37"
