[package]
name = "artemis-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

alloy = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
types = { path = "../types" }
alloy-chains = { workspace = true }
shared = { path = "../shared" }


## async
async-trait = "0.1.64"
futures = "0.3"
tokio-stream = { version = "0.1", features = ['sync'] }


## misc
anyhow = "1.0.70"
tracing = { workspace = true }
