[package]
name = "tx-executor"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy = { workspace = true }
alloy-rpc-types = { workspace = true }
foundry-config = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-primitives = { workspace = true }
alloy-chains = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
dotenv = { workspace = true }

provider = { path = "../provider" }
shared = { path = "../shared" }
addressbook = { path = "../addressbook" }
odos-client = { path = "../odos-client" }
types = { path = "../types" }
amms = { path = "../amms" }
async-trait = "0.1.64"
futures = "0.3.27"
anyhow = "1.0.70"
tracing-subscriber = "0.3.16"
