[package]
name = "types"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
alloy-chains = "0.1.27"
db = { path = "../db" }
alloy = { version = "0.2", features = ["full"] }
alloy-rpc-types = "0.2.1"
clap = { version = "4.2.5", features = ["derive"] }
