[package]
name = "base-arb-strategy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { workspace = true }
alloy-chains = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
mev-share = "0.1.4"
async-trait = "0.1.64"
engine = { path = "../../engine" }
tracing-subscriber = "0.3.16"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
indicatif = "0.17.8"
provider = { path = "../../provider" }
bindings = { path = "../../bindings" }
serde_json = "1.0"
addressbook = { path = "../../addressbook" }
amms = { path = "../../amms" }
tx-executor = { path = "../../tx-executor" }
dashmap = "6.0.1"
shared = { path = "../../shared" }
db = { path = "../../db" }
types = { path = "../../types" }
alloy-sol-types = "0.8.1"
diesel = { version = "2.0.0", features = ["postgres"] }
[features]
integration-tests = []
