[package]
name = "uni-tri-arb-strategy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { version = "0.2", features = ["full"] }
alloy-chains = "0.1.0"
tokio = { version = "1.18", features = ["full"] }
mev-share = "0.1.4"
async-trait = "0.1.64"
artemis-core = { path = "../../artemis-core" }
anyhow = "1.0.70"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
indicatif = "0.17.8"
# uni-tri-arb-bindings = { path = "./contracts/bindings" }
bindings = { path = "../../bindings" }
serde_json = "1.0"
# amms = { path = "http://github.com/darkforestry/amms-rs" }
# amms = "0.6.3"
amms = { path = "../../amms-rs" }
dashmap = "6.0.1"
shared = { path = "../../shared" }

[features]
integration-tests = []


