[package]
name = "uni-tri-arb-strategy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
alloy = { workspace = true }
alloy-chains = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
mev-share = "0.1.4"
async-trait = "0.1.64"
artemis-core = { path = "../../artemis-core" }
anyhow = "1.0.70"
tracing-subscriber = "0.3.16"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
indicatif = "0.17.8"
# uni-tri-arb-bindings = { path = "./contracts/bindings" }
bindings = { path = "../../bindings" }
serde_json = "1.0"
addressbook = { path = "../../addressbook" }
amms = { path = "../../amms-rs" }
dashmap = "6.0.1"
shared = { path = "../../shared" }
db = { path = "../../db" }
types = { path = "../../types" }
alloy-sol-types = "0.8.1"
diesel = { version = "2.0.0", features = ["postgres"] }
[features]
integration-tests = []
